Fix loading adapter still too early